--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "start-storybook -p 6006",
+    "lint": "eslint src/ ",
+    "lint:fix": "npm run lint -- --fix",
+    "lint:watch": "watch 'npm run lint' .",
     "build-storybook": "build-storybook",
     "bundlesize": "bundlesize",
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.config.js",
@@ -24,6 +27,9 @@
     "@storybook/manager-webpack4": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "0.0.13",
+    "@types/jest": "^28.1.6",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.1.0",
     "babel-loader": "^8.2.5",
@@ -40,18 +46,21 @@
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react": "^7.30.1",
     "husky": "^4.3.5",
     "lint-staged": "^10.5.3",
     "mini-css-extract-plugin": "^0.9.0",
     "peer-deps-externals-webpack-plugin": "^1.0.4",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
+    "sass": "^1.54.0",
     "sass-loader": "^8.0.2",
     "storybook-addon-react-docgen": "^1.2.42",
     "storybook-dark-mode": "^1.1.0",
     "style-loader": "^1.2.1",
     "svg-url-loader": "^6.0.0",
+    "tailwindcss": "^3.1.6",
+    "typescript": "^4.7.4",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^3.3.11"
@@ -60,6 +69,7 @@
     "@mantine/core": "^4.2.12",
     "@mantine/dates": "^4.2.12",
     "@mantine/hooks": "^4.2.12",
+    "@tailwindcss/forms": "^0.5.2",
     "dayjs": "^1.11.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -69,9 +79,6 @@
     "lodash": "^4.17.20",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "lint-staged": {
     "*.js": [
