--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "start": "start-storybook -p 6006",
     "lint": "eslint src/ ",
     "lint:fix": "npm run lint -- --fix",
@@ -27,11 +28,13 @@
     "@storybook/manager-webpack4": "^6.5.9",
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "0.0.13",
+    "@storybook/testing-react": "^1.3.0",
+    "@testing-library/react": "^12.1.4",
     "@types/jest": "^28.1.6",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.1.0",
+    "babel-jest": "^28.0.0",
     "babel-loader": "^8.2.5",
     "babel-minify-webpack-plugin": "^0.3.1",
     "bundlesize": "^0.18.1",
@@ -48,6 +51,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.30.1",
     "husky": "^4.3.5",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "lint-staged": "^10.5.3",
     "mini-css-extract-plugin": "^0.9.0",
     "peer-deps-externals-webpack-plugin": "^1.0.4",
@@ -60,6 +65,7 @@
     "style-loader": "^1.2.1",
     "svg-url-loader": "^6.0.0",
     "tailwindcss": "^3.1.6",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4",
     "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^4.5.0",
