--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,10 @@
     "jsx": "react-jsx"
   },
   "include": ["src"],
-  "exclude": ["*.test.ts"]
+  "exclude": ["*.test.ts"],
+  "paths": {
+    "react/*": ["./node_modules/react/*"],
+    "stories/*": ["./src/stories"],
+    "composite": ["./src/composite"]
+  }
 }
