--- a/package.json
+++ b/package.json
@@ -77,8 +77,11 @@
     "@mantine/hooks": "^4.2.12",
     "@tailwindcss/forms": "^0.5.2",
     "dayjs": "^1.11.3",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-debounce-input": "^3.3.0",
+    "react-dom": "^17.0.2",
+    "yup": "^0.32.11"
   },
   "peerDependencies": {
     "classnames": "^2.2.6",
