--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@storybook/testing-library": "0.0.13",
     "@storybook/testing-react": "^1.3.0",
     "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^14.4.2",
     "@types/jest": "^28.1.6",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
