--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "@storybook/react": "^6.5.9",
     "@storybook/testing-library": "0.0.13",
     "@storybook/testing-react": "^1.3.0",
-    "@testing-library/react": "^12.1.4",
     "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^14.4.2",
     "@types/jest": "^28.1.6",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
+    "autoprefixer": "^10.4.8",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^28.0.0",
     "babel-loader": "^8.2.5",
@@ -58,6 +59,7 @@
     "lint-staged": "^10.5.3",
     "mini-css-extract-plugin": "^0.9.0",
     "peer-deps-externals-webpack-plugin": "^1.0.4",
+    "postcss": "^8.4.16",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "sass": "^1.54.0",
