added README, added release package workflow, added npmrc
added npm install peers

added npm install peers

added the env to release package yml

added the env to release package yml

moved the environment variable

set environment variable properly

build(gh): added missing environment variable

updated npmrc

build: updated npm rc for the picking github token for package

added README, added release package workflow, added npmrc

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -6,9 +6,12 @@ on:
 
 name: Pull request required checks
 
+
 jobs:
   linting-and-testing:
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{secrets.GH_TOKEN}}
     steps:
       - name: Checkout
         uses: actions/checkout@master
